--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -8,24 +8,24 @@ workflows:
         cocoapods: default
         vars:
             XCODE_PROJECT: "RawgGamesV4/RawgGamesV4.xcodeproj" # Isikan nama project Anda.
-            XCODE_SCHEME: "RawgGamesV4" # Isikan nama scheme project Anda.
+            XCODE_SCHEME: "RawgGamesV4/RawgGamesV4" # Isikan nama scheme project Anda.
     scripts:
         - name: Run tests
-        script: |
-          xcodebuild \
-          -project "$XCODE_PROJECT" \
-          -scheme "$XCODE_SCHEME" \
-          -sdk iphonesimulator \
-          -destination 'platform=iOS Simulator,name=iPhone 12 Pro Max,OS=16.1' \
-          clean build test CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO
+            script: |
+              xcodebuild \
+              -project "$XCODE_PROJECT" \
+              -scheme "$XCODE_SCHEME" \
+              -sdk iphonesimulator \
+              -destination 'platform=iOS Simulator,name=iPhone 12 Pro Max,OS=16.1' \
+              clean build test CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO
         - name: Build debug app
-        script: |
-          xcodebuild build -project "$XCODE_PROJECT" \
-          -scheme "$XCODE_SCHEME" \
-          CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO CODE_SIGNING_ALLOWED=NO
+            script: |
+              xcodebuild build -project "$XCODE_PROJECT" \
+              -scheme "$XCODE_SCHEME" \
+              CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO CODE_SIGNING_ALLOWED=NO
     artifacts:
         - $HOME/Library/Developer/Xcode/DerivedData/**/Build/**/*.app
     publishing:
         email:
-        recipients:
-            - dhimasbrd@gmail.com # Isikan email untuk notifikasi status building.
+            recipients:
+                - dhimasbrd@gmail.com # Isikan email untuk notifikasi status building.
