--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -9,14 +9,14 @@ workflows:
                 XCODE_PROJECT: "RawgGamesV4/RawgGamesV4.xcodeproj" # Isikan nama project Anda.
                 XCODE_SCHEME: "RawgGamesV4" # Isikan nama scheme project Anda.
         scripts:
-            - name: Run Tests
-              script: |
-                  xcodebuild \
-                  -project "$XCODE_PROJECT" \
-                  -scheme "$XCODE_SCHEME" \
-                  -sdk iphonesimulator \
-                  -destination 'platform=iOS Simulator,name=iPhone 12 Pro Max,OS=16.1' \
-                  clean build test CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO
+            # - name: Run Tests
+            #   script: |
+            #       xcodebuild \
+            #       -project "$XCODE_PROJECT" \
+            #       -scheme "$XCODE_SCHEME" \
+            #       -sdk iphonesimulator \
+            #       -destination 'platform=iOS Simulator,name=iPhone 12 Pro Max,OS=16.1' \
+            #       clean build test CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO
             - name: Build Debug App
               script: |
                   xcodebuild build -project "$XCODE_PROJECT" \
