Add variable to codemagic

--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -5,7 +5,10 @@ workflows:
         environment:
             xcode: latest
             cocoapods: default
+            groups:
+                - plist
             vars:
+                CONFIG_FOLDER: "RawgGamesV4/RawgGamesV4/SupportingFiles/Config"
                 XCODE_PROJECT: "RawgGamesV4/RawgGamesV4.xcodeproj" # Isikan nama project Anda.
                 XCODE_SCHEME: "RawgGamesV4" # Isikan nama scheme project Anda.
         scripts:
@@ -19,6 +22,7 @@ workflows:
             #       clean build test CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO
             - name: Build Debug App
               script: |
+                  echo $API_KEY > $CONFIG_FOLDER/ApiKey.plist
                   xcodebuild build -project "$XCODE_PROJECT" \
                   -scheme "$XCODE_SCHEME" \
                   CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO CODE_SIGNING_ALLOWED=NO
