--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -22,7 +22,7 @@ workflows:
             #       clean build test CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO
             - name: Build Debug App
               script: |
-                  echo $API_KEY > $CONFIG_FOLDER/ApiKey.plist
+                  echo $API_KEY > $CONFIG_FOLDER/ApiKey.plist \
                   xcodebuild build -project "$XCODE_PROJECT" \
                   -scheme "$XCODE_SCHEME" \
                   CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO CODE_SIGNING_ALLOWED=NO
